Fix tabs search trigger visibility on tablet devices
- Change device check from 'mobile' only to include 'tablet'
- Update CSS media queries to hide only on desktop (>=1024px)
- Add debug logging for search visibility observer
- Fix resize handler to only close overlay on desktop

--- a/themes/san-diego/source/styles/components/_mobile-tabs.scss
+++ b/themes/san-diego/source/styles/components/_mobile-tabs.scss
@@ -1007,8 +1007,8 @@ body.dark-mode-forced .mobile-tabs-backing {
 		visibility: visible;
 	}
 
-	// Hide on desktop/tablet
-	@media screen and (min-width: (variables.$mobile-breakpoint + 1px)) {
+	// Hide on desktop (tabs aren't visible on desktop)
+	@media screen and (min-width: 1024px) {
 		display: none;
 	}
 
@@ -1093,8 +1093,8 @@ body.dark-mode-forced .tabs-search-trigger {
 		transform: scaleX(1) translateX(0);
 	}
 
-	// Hide on desktop/tablet
-	@media screen and (min-width: (variables.$mobile-breakpoint + 1px)) {
+	// Hide on desktop (tabs aren't visible on desktop)
+	@media screen and (min-width: 1024px) {
 		display: none;
 	}
 
